@@ -1824,10 +1824,10 @@ public class ColumnFamilyStore implements ColumnFamilyStoreMBean
     public void setMinimumCompactionThreshold(int minCompactionThreshold)
     {
         if ((minCompactionThreshold > this.maxCompactionThreshold.value()) && this.maxCompactionThreshold.value() != 0)
-        {
             throw new RuntimeException("The min_compaction_threshold cannot be larger than the max.");
-        }
+
         this.minCompactionThreshold.set(minCompactionThreshold);
+        CompactionManager.instance.submitBackground(this);
     }
 
     public int getMaximumCompactionThreshold()
@@ -1838,10 +1838,10 @@ public class ColumnFamilyStore implements ColumnFamilyStoreMBean
     public void setMaximumCompactionThreshold(int maxCompactionThreshold)
     {
         if (maxCompactionThreshold > 0 && maxCompactionThreshold < this.minCompactionThreshold.value())
-        {
             throw new RuntimeException("The max_compaction_threshold cannot be smaller than the min.");
-        }
+
         this.maxCompactionThreshold.set(maxCompactionThreshold);
+        CompactionManager.instance.submitBackground(this);
     }
 
     public boolean isCompactionDisabled()
